--- a/API/ClientApp/src/custom.css
+++ b/API/ClientApp/src/custom.css
@@ -1,14 +1,5 @@
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 
-code {
-  color: #E01A76;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+*{
+  font-family: 'Staatliches', cursive;
 }
